--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8"/>
         <title>CommonJS React Skeleton</title>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
     </head>
     <body>
-        <div id="ingredients"></div>
+        <div style="margin-top:10px;" class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-10">
+                    <div class="row">
+                        <div id="leftMediumWidget" class="col-xs-12 col-sm-4"></div>
+                        <div id="middleMediumWidget" class="col-xs-12 col-sm-4"></div>
+                        <div id="rightMediumWidget" class="col-xs-12 col-sm-4"></div>
+                    </div>
+                    <div class="row">
+                        <div id="blueLargeWidget" class="col-xs-12"></div>
+                    </div>
+                    <div class="row">
+                        <div id="pinkLargeWidget" class="col-xs-12"></div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-sm-offset-4 col-md-2 col-md-offset-0">
+                    <div class="row">
+                        <div id="orangeMediumWidget" class="col-xs-12"></div>
+                    </div>
+                    <div class="row">
+                        <div id="blueSmallWidget" class="col-xs-12"></div>
+                    </div>
+                    <div class="row">
+                        <div id="purpleSmallWidget" class="col-xs-12"></div>
+                    </div>
+                    <div class="row">
+                        <div id="redSmallWidget" class="col-xs-12"></div>
+                    </div>
+                    <div class="row">
+                        <div id="greenSmallWidget" class="col-xs-12"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="js/jquery-1.12.0.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
